--- a/shop/modules/components/code/sass/styles.scss
+++ b/shop/modules/components/code/sass/styles.scss
@@ -7,8 +7,8 @@
 
 body {
     height: 100vh;
-    background-color: #937BAD;
-    color: #fff;
+    background-color: #8325e7;
+    color: #e90707;
   }
   
   nav {
