--- a/shop/modules/home/sass/styles.scss
+++ b/shop/modules/home/sass/styles.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+.images-url {
+  background-color: #fff;
+ 
+}
+
 .container-menu-products {
   display: flex;
   flex-wrap: wrap;
