update in branch dev-design

--- a/shop/modules/home/sass/styles.scss
+++ b/shop/modules/home/sass/styles.scss
@@ -4,9 +4,8 @@
   box-sizing: border-box;
 }
 
-.images-url {
-  background-color: #fff;
- 
+main {
+  height: 230vh;
 }
 
 .container-menu-products {
