--- a/shop/modules/form/widget/sass/form.scss
+++ b/shop/modules/form/widget/sass/form.scss
@@ -2,9 +2,10 @@
 
 .form__container {
 
+    
     margin: auto;
     place-items: center;
-    height: 700px;
+    height: 120vh;
     max-width: 900px;
 
     article {
@@ -12,7 +13,7 @@
         flex-direction: row;
 
         border: 2px solid #000000;
-        height: 100%;
+        height: 700px;
         width: 100%;
         border-radius: 14px;
         background-color: #fff;
@@ -89,7 +90,7 @@
                 input {
                     padding: .5rem;
                     font-size: 16px;
-                    height: 50px;
+                    height: 30px;
                     border: 2px solid;
                     border-radius: 11px;
                     width: 130%;
